syntax = "proto3";

package course;

service CourseService {
    rpc GetCourseDetails(GetCourseDetailsRequest) returns (Course);
    rpc GetEnrollment(GetEnrollmentRequest) returns (Enrollment);
}

message GetEnrollmentRequest {
  string enrollment_id = 1;
}

message Enrollment {
    string id = 1;
    string learner_id = 2;
    string course_id = 3;
    string status = 4;
    string payment_id = 5;
    string instructor_id = 6;
    string created_at = 7;
    string updated_at = 8;
}

message GetCourseDetailsRequest {
    string courseId = 1;
}

message Course {
   string id = 1;
   string  title = 2;
   string description = 3;
   string thumbnail= 4 ;
   string  level = 5;
   string categoryId = 6;
   float price = 7;
   bool isFree = 8;
   string  status = 9;
   Instructor instructor = 11;
   float averageRating = 12;
   int32  ratingCount = 13;
   int32 enrollmentCount = 14;
   string createdAt = 15;
   string updatedAt = 16;
   string publishedAt = 17;
}

message Instructor {
    string id =  1;
    string name = 2;
}
